Scrolling issue fixed and nav bar alignment fixed

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
     line-height: 65px;
     background-image: url("../Basic-Portfolio/assets/images/circuit.png");
-    margin: 0px auto; /*when an image is added on the background, it wraps around it and this margin expression pushes it up*/
+    margin: 0px auto; /*When an image is added on the background, it wraps around it and this margin expression pushes it up*/
 }
 
 .navbar-brand {
     position: relative;
-    left: 15%;
+    left: 22.5%;
     font-family: 'Georgia', Times, Times New Roman, serif;
     background-color: #4aaaa5;
     color: #ffffff;
@@ -20,11 +20,11 @@ body {
 .row{
     position: absolute;
     top: 15%;
-    left: 15%;
-    height: 450px;
-    width: 960px;
+    left: 20%;
+    height: auto;
+    width: 60rem;
     background-color: #ffffff;
-    overflow: scroll;
+    /*overflow: scroll;*/
 }
 
 .panel-heading{
@@ -37,16 +37,26 @@ body {
 }
 
 #picture{
+    position: relative;
     float: left;
-    margin-left: 2%;
-    height: 250px;
-    width: 250px;
+    margin-left: 1%;
+    height: 260px;
+    width: 204px;
     background-image: url("../Basic-Portfolio/assets/images/ME.jpg");
     background-size: contain;
     background-repeat: no-repeat;
 }
 
+h2 {
+    color: #4aaaa5;
+}
+
+.push-content-up {
+    height: 50px;
+}
+
 .page-footer {
+  position: relative;
   clear: both;
   font-size: 12px;
   color: #ffffff;
